--- a/colors-and-gradient5.5.html
+++ b/colors-and-gradient5.5.html
@@ -44,6 +44,7 @@ figcaption {
 
 <style>
     ul {
+        border: 1px solid rgba(0,0,0,0.3);
         height: 35px;
         list-style: none;
         padding: 0;
