--- a/forms7.0.html
+++ b/forms7.0.html
@@ -1,2 +1,37 @@
-<input type="url" placeholder="url here">
-<input type="tel" placeholder="tel here">
+
+<p>
+    <label for="url">URL</label>
+    <input type="url" id="url" placeholder="url here" autofocus>
+    <span class="hint">por exemplo, url.com.br</span>
+</p>
+
+<p>
+    <label for="tel">tel</label>
+    <input type="tel" id="tel" placeholder="tel here">
+    <span class="hint">por exemplo, 1199680000</span>
+</p>
+    
+
+<style>
+
+.hint {
+    background-color: #FFFBE4;
+    border-radius: 3px;
+    border: 1px solid #CCC;
+    box-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+    display: inline-block; /* Colocamos o `inline-block` de volta. */
+    font-size: 0.8em;
+    margin-left: 20px;
+    opacity: 0; /* Remove a opacidade do elemento para escondê-lo. */
+    padding: 3px;  
+    transition: opacity 0.5s; 
+    transition: opacity 0.5s, margin-left 0.5s; 
+}
+
+input:focus + .hint, textarea:focus + .hint {
+    margin-left: 5px;
+    opacity: 1;
+}
+
+
+</style>
